[#16206] Fix Windows batch files